# AssetOpsBench

./: .all-contributorsrc  .gitignore  .gitmodules  Makefile  QUICK_START_GUIDE.md  README.md  README_SOLUTIONS.md  SOLUTION_DOCUMENTATION.md  SOLUTION_VERIFICATION.md  pyproject.toml
aaai_website/: README.md  index.html  style.css
aaai_website/Part 1/: README.md
aaai_website/Part 2/: README.md
aaai_website/Part 3/: README.md
aaai_website/Part 4/: README.md
aaai_website/Part 5/: README.md
aobench/: Makefile  README.md  pyproject.toml
aobench/datalayer/eamlite/: .gitignore  README.md  compose.yml  pyproject.toml
aobench/datalayer/eamlite/db/: 01_eamlite.sql  02_etl_wo.sql  03_etl_ts.sql  04_etl_siteloc.sql  Containerfile  eamlite.sql  etl.sql  etl_ts.sql
aobench/datalayer/eamlite/db/data/: chiller_readings.csv  workorders.csv
aobench/datalayer/eamlite/src/: Containerfile  crud_generator.py  database.py  eam_models.py  main.py
aobench/datalayer/eamlite/src/eamlite/: crud_generator.py  eam_models.py  main.py
aobench/datalayer/eamlite/tests/: test_app.py
aobench/scenario-client/: pyproject.toml
aobench/scenario-client/src/scenario_client/: __init__.py  client.py
aobench/scenario-server/: Containerfile  pyproject.toml
aobench/scenario-server/src/scenario_server/: __init__.py  app.py  endpoints.py  entities.py  grading.py
aobench/scenario-server/src/scenario_server/handlers/: scenario_handler.py
aobench/scenario-server/src/scenario_server/handlers/aob/: aob.py
aobench/scenario-server/src/scenario_server/handlers/aob_iot/: aob_iot.py
aobench/scenario-server/src/scenario_server/handlers/aob_tsfm/: aob_tsfm.py
aobench/scenario-server/src/scenario_server/handlers/aob_workorders/: aob_workorders.py
aobench/src/scenario-server/: serve.py
benchmark/: .env  README.md  README_CODS.md  basic_requirements.txt  docker-compose.yml  entrypoint.sh  entrypoint_track1.sh  extra_requirements.txt  run_plan_execute.py  run_track_1.py
benchmark/cods_track1/: .env  README_CODS.md  Submission_CODS.md  docker-compose.yml  entrypoint.sh  run_track_1.py
benchmark/cods_track2/: .env  README_CODS.md  couchdb_setup.sh  docker-compose.yml  entrypoint.sh  run_track_2.py
docs/: aaai_Workshop.html  index.html  main.html  scenario_generation.html
documentation/: WIP.md
hf_integration/: README.md  dataset_dict.py
metadata/: all_utterance.jsonl
pydantic_classes/: all_utterance.py
scenarios/: AssetOpsBench-croissant.json  AssetOpsBench-scenarios-croissant.json  all_utterance.jsonl  sensor_june_croissant.json
validation/: scenarios_schema.py  validate_scenarios.py
validation_output/: summary.txt  validation_report.json  validation_summary.csv
(+141 files in other folders)
