[project]
name = "scenario-server"
version = "0.1.0"
description = "server scenarios"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[jinja]>=2.17.0",
    "mlflow>=3.4.0",
    "reactxen",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
reactxen = { git = "https://github.com/IBM/ReActXen.git" }
