[project]
name = "eamlite"
version = "0.1.0"
description = "EAMLite is an api and mcp server to interact with an EAM inspired database containing assetops data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "psycopg[binary]>=3.2.9",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "sqlacodegen>=3.1.1",
]

[project.scripts]
eamlite = "eamlite:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
